strataCheck function: added 2 more summary fields to output
number of bad strata and proportion of bad strata from the download state now included

--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -383,20 +383,20 @@ strataCheck(DL1301_fixed)
 ```
 
 ```
-## # A tibble: 35 × 4
-##    dl_state spp          state_strata normal_strata
-##    <chr>    <chr>        <chr>        <chr>        
-##  1 FL       dove_bag     0            1, 2, 3, 5   
-##  2 IA       dove_bag     0            1, 2, 3, 5   
-##  3 OR       dove_bag     0            1, 2, 3, 5   
-##  4 TN       dove_bag     0            1, 2, 3, 5   
-##  5 TN       woodcock_bag 0            1, 2, 3, 5   
-##  6 IA       ducks_bag    0            1, 2, 3, 4   
-##  7 IA       geese_bag    0            1, 2, 3, 4   
-##  8 OR       ducks_bag    0            1, 2, 3, 4   
-##  9 OR       geese_bag    0            1, 2, 3, 4   
-## 10 TN       ducks_bag    0            1, 2, 3, 4   
-## # ℹ 25 more rows
+## # A tibble: 39 × 6
+##    dl_state spp          state_strata normal_strata     n prop 
+##    <chr>    <chr>        <chr>        <chr>         <int> <chr>
+##  1 FL       dove_bag     0            1, 2, 3, 5        2 0%   
+##  2 IA       dove_bag     0            1, 2, 3, 5      279 9%   
+##  3 OR       dove_bag     0            1, 2, 3, 5       11 1%   
+##  4 TN       dove_bag     0            1, 2, 3, 5       85 4%   
+##  5 TN       woodcock_bag 0            1, 2, 3, 5       85 4%   
+##  6 IA       ducks_bag    0            1, 2, 3, 4     2841 89%  
+##  7 IA       geese_bag    0            1, 2, 3, 4     2841 89%  
+##  8 OR       ducks_bag    0            1, 2, 3, 4       11 1%   
+##  9 OR       geese_bag    0            1, 2, 3, 4       11 1%   
+## 10 TN       ducks_bag    0            1, 2, 3, 4       85 4%   
+## # ℹ 29 more rows
 ```
 
 ### validate
@@ -420,7 +420,7 @@ validate(DL1301_fixed, type = "horizontal")
 ##  4 MO20211229.txt 1        2697    3604       0.748
 ##  5 ME20211229.txt 1         112     151       0.742
 ##  6 NM20211229.txt 1         208     295       0.705
-##  7 ID20211229.txt 1        1761    2588       0.680
+##  7 ID20211229.txt 1        1762    2588       0.681
 ##  8 ND20211215.txt 1         130     204       0.637
 ##  9 CA20211229.txt 1        2003    3211       0.624
 ## 10 IN20211229.txt 1         416     690       0.603
