--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -86,7 +86,8 @@ renameFiles(path = "C:/HIP/DL1301", year = 2021)
 
 Check if any files in the input folder have already been written to the processed folder.
 
-``{r filecheck, eval = FALSE}
+
+```r
 fileCheck(
   raw_path = "C:/HIP/DL1301",
   processed_path = "C:/HIP/corrected_data"
@@ -296,15 +297,15 @@ DL1301_current <- issueCheck(DL1301_clean, year = 2021, plot = F, write = F)
 ```
 
 ```
+## * 0 future records need to be modified (registration_yr - 1) and copied for next year.
+```
+
+```
 ## * 0 future Mississippi records need to be copied for next year.
 ```
 
 ```
-## * 709 future records have been modified to have registration_yr - 1. They have been copied and saved for next season in the future data .csv with their original registration_yr.
-```
-
-```
-## * 0 records need to be postponed for next year.
+## * 709 future records have been postponed for next year. They will be filtered out from this download and saved in the future data .csv with their original registration_yr.
 ```
 
 ```
@@ -312,14 +313,13 @@ DL1301_current <- issueCheck(DL1301_clean, year = 2021, plot = F, write = F)
 ```
 
 ```
-## # A tibble: 5 × 4
+## # A tibble: 4 × 4
 ##   reg_yr_eval issue_eval       decision sum_n
 ##   <chr>       <chr>            <chr>    <int>
-## 1 copy        two season state copy       709
-## 2 nochange    current          nochange  3203
-## 3 nochange    past             bad      30023
-## 4 nochange    two season state nochange  8452
-## 5 postpone    past             bad       6616
+## 1 nochange    past             bad      30023
+## 2 nochange    two season state nochange 11655
+## 3 postpone    past             bad       6616
+## 4 postpone    two season state postpone   709
 ```
 
 ```
@@ -357,7 +357,7 @@ findDuplicates(DL1301_current, return = "table")
 ```
 
 ```
-## # A tibble: 15 × 2
+## # A tibble: 13 × 2
 ##    dupl                                         count
 ##    <chr>                                        <int>
 ##  1 address                                          2
@@ -365,16 +365,14 @@ findDuplicates(DL1301_current, return = "table")
 ##  3 address-email                                    2
 ##  4 address-zip-email                                1
 ##  5 address-zip-issue_date                           1
-##  6 bag                                            485
+##  6 bag                                            480
 ##  7 email                                            2
-##  8 hunt_mig_birds                                   1
-##  9 issue_date                                      25
-## 10 issue_date-dl_date                               1
-## 11 issue_date-email                                 1
-## 12 issue_date-hunt_mig_birds-dl_date                3
-## 13 middle                                           5
-## 14 middle-address-city-zip-hunt_mig_birds-email     1
-## 15 suffix-issue_date-email                          1
+##  8 issue_date                                      25
+##  9 issue_date-dl_date                               1
+## 10 issue_date-hunt_mig_birds-dl_date                3
+## 11 middle                                           5
+## 12 middle-address-city-zip-hunt_mig_birds-email     1
+## 13 suffix-issue_date-email                          1
 ```
 
 ### fixDuplicates
@@ -442,20 +440,20 @@ identicalBags(DL1301_fixed)
 ```
 
 ```
-## # A tibble: 21 × 5
+## # A tibble: 23 × 5
 ##    source_file    spp1               spp2                 n value  
 ##    <chr>          <chr>              <chr>            <int> <chr>  
-##  1 IA20211215.txt brant              woodcock_bag      3175 0, 1, 2
-##  2 IA20211215.txt brant              rails_gallinules  3175 0, 1, 2
-##  3 IA20211215.txt rails_gallinules   woodcock_bag      3175 0, 1, 2
-##  4 KY20211228.txt band_tailed_pigeon cranes             984 1      
-##  5 KY20211228.txt band_tailed_pigeon brant              984 1      
-##  6 KY20211228.txt band_tailed_pigeon seaducks           984 1      
-##  7 KY20211228.txt brant              cranes             984 1      
-##  8 KY20211228.txt brant              seaducks           984 1      
-##  9 KY20211228.txt cranes             seaducks           984 1      
-## 10 NE20211217.txt band_tailed_pigeon brant              903 1      
-## # ℹ 11 more rows
+##  1 CT20211229.txt coots_snipe        dove_bag            87 1      
+##  2 IA20211215.txt brant              woodcock_bag      3175 0, 1, 2
+##  3 IA20211215.txt brant              rails_gallinules  3175 0, 1, 2
+##  4 IA20211215.txt rails_gallinules   woodcock_bag      3175 0, 1, 2
+##  5 KY20211228.txt band_tailed_pigeon cranes             984 1      
+##  6 KY20211228.txt band_tailed_pigeon brant              984 1      
+##  7 KY20211228.txt band_tailed_pigeon seaducks           984 1      
+##  8 KY20211228.txt brant              cranes             984 1      
+##  9 KY20211228.txt brant              seaducks           984 1      
+## 10 KY20211228.txt cranes             seaducks           984 1      
+## # ℹ 13 more rows
 ```
 
 ### validate
@@ -470,7 +468,7 @@ validate(DL1301_fixed, type = "horizontal")
 ```
 
 ```
-## # A tibble: 49 × 5
+## # A tibble: 47 × 5
 ##    source_file    h_value h_rep h_total prop_repeat
 ##    <chr>          <chr>   <int>   <int>       <dbl>
 ##  1 IA20211215.txt 0        2841    3175       0.895
@@ -479,11 +477,11 @@ validate(DL1301_fixed, type = "horizontal")
 ##  4 MO20211229.txt 1        2697    3604       0.748
 ##  5 ME20211229.txt 1         112     151       0.742
 ##  6 NM20211229.txt 1         208     295       0.705
-##  7 ID20211229.txt 1        1764    2588       0.682
-##  8 ND20211215.txt 1         130     204       0.637
-##  9 CA20211229.txt 1        2003    3211       0.624
-## 10 IN20211229.txt 1         416     690       0.603
-## # ℹ 39 more rows
+##  7 ID20211229.txt 1        1760    2588       0.680
+##  8 CT20211229.txt 1          57      87       0.655
+##  9 ND20211215.txt 1         130     204       0.637
+## 10 CA20211229.txt 1        2003    3211       0.624
+## # ℹ 37 more rows
 ```
 
 <b>Vertically.</b> The vertical check searches within each column for repetition. Any species group column with the same value in all rows will be detected. The default version of this function (`all = FALSE`) only checks duck bags. If the parameter is set to `all = TRUE`, every species group will be checked.
@@ -788,7 +786,7 @@ errorTable(DL1301_proofed)
 ```
 
 ```
-## # A tibble: 85 × 3
+## # A tibble: 82 × 3
 ##    dl_state error           error_count
 ##    <chr>    <chr>                 <int>
 ##  1 AK       issue_date                1
@@ -801,7 +799,7 @@ errorTable(DL1301_proofed)
 ##  8 AL       suffix                    5
 ##  9 AL       zip                       7
 ## 10 CA       birth_date              173
-## # ℹ 75 more rows
+## # ℹ 72 more rows
 ```
 
 Errors can be reported by only location by turning off the `field` parameter.
@@ -812,20 +810,20 @@ errorTable(DL1301_proofed, field = "none")
 ```
 
 ```
-## # A tibble: 28 × 2
+## # A tibble: 27 × 2
 ##    dl_state error_count
 ##    <chr>          <int>
 ##  1 AK                 2
 ##  2 AL              4814
 ##  3 CA               175
 ##  4 CO                67
-##  5 CT               252
+##  5 CT                88
 ##  6 FL                 8
 ##  7 GA                18
 ##  8 IA                60
 ##  9 ID               175
 ## 10 IN                53
-## # ℹ 18 more rows
+## # ℹ 17 more rows
 ```
 
 Errors can be reported by only field by turning off the `loc` parameter.
@@ -839,10 +837,10 @@ errorTable(DL1301_proofed, loc = "none")
 ## # A tibble: 12 × 2
 ##    error           error_count
 ##    <chr>                 <int>
-##  1 birth_date             1307
+##  1 birth_date             1295
 ##  2 city                      1
-##  3 email                   274
-##  4 firstname                49
+##  3 email                   112
+##  4 firstname                48
 ##  5 hunt_mig_birds           11
 ##  6 issue_date                1
 ##  7 lastname                  5
@@ -921,7 +919,7 @@ redFlags(DL1301_proofed, type = "state", threshold = 0.03)
 ## # A tibble: 3 × 5
 ##   dl_state count_errors count_correct proportion flag        
 ##   <chr>           <int>         <dbl>      <dbl> <chr>       
-## 1 CT                252          3220     0.0726 error > 0.03
+## 1 CT                 88          1130     0.0722 error > 0.03
 ## 2 AL               4814         62260     0.0718 error > 0.03
 ## 3 LA               1808         23392     0.0717 error > 0.03
 ```
@@ -938,8 +936,8 @@ redFlags(DL1301_proofed, type = "field", threshold = 0.01)
 ## # A tibble: 2 × 5
 ##   errors          count_errors count_correct proportion flag        
 ##   <chr>                  <int>         <int>      <dbl> <chr>       
-## 1 registration_yr         6592         41863     0.136  error > 0.01
-## 2 birth_date              1307         47148     0.0270 error > 0.01
+## 1 registration_yr         6592         41161     0.138  error > 0.01
+## 2 birth_date              1295         46458     0.0271 error > 0.01
 ```
 
 ## Troubleshooting
